# ai-academy

./: .gitignore  README.md  pyproject.toml
ai_academy/: __init__.py  main.py
ai_academy/skill-packs/ai_agents/: __init__.py
ai_academy/skill-packs/ai_basics/: __init__.py
ai_academy/skill-packs/ai_coding/: __init__.py
ai_academy/skill-packs/ai_ethics/: __init__.py
ai_academy/skill-packs/ai_for_work/: __init__.py
ai_academy/skill-packs/ai_tools/: __init__.py
ai_academy/skill-packs/chatbots/: __init__.py
ai_academy/skill-packs/prompt_engineering/: __init__.py
api/: index.py
